--- a/.github/workflows/issue_labeler.yaml
+++ b/.github/workflows/issue_labeler.yaml
@@ -20,36 +20,14 @@ jobs:
             -H "Accept: application/vnd.github.v3+json" \
             https://api.github.com/repos/${{ github.repository }}/labels \
             -d '{
-              "name": "gssoc-extd",
-              "color": "0E8A16",
-              "description": "GSSOC extended contribution"
+              "name": "Review Queued",
+              "color": "FFAE00",
+              "description": "Pending review"
             }'
 
-          curl -X POST \
-            -H "Authorization: token $GITHUB_TOKEN" \
-            -H "Accept: application/vnd.github.v3+json" \
-            https://api.github.com/repos/${{ github.repository }}/labels \
-            -d '{
-              "name": "hacktoberfest-accepted",
-              "color": "FF7518",
-              "description": "Hacktoberfest participation"
-            }'
-
-          curl -X POST \
-            -H "Authorization: token $GITHUB_TOKEN" \
-            -H "Accept: application/vnd.github.v3+json" \
-            https://api.github.com/repos/${{ github.repository }}/labels \
-            -d '{
-              "name": "level?",
-              "color": "5319E7",
-              "description": "Placeholder for difficulty level"
-            }'
-
-      - name: Add Labels to Issue
+      - name: Add Label to Issue
         uses: actions-ecosystem/action-add-labels@v1
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           labels: |
-            gssoc-extd
-            hacktoberfest
-            level?
+            Review Queued
