--- a/.github/workflows/issue_open_close.yml
+++ b/.github/workflows/issue_open_close.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           issue_number: ${{ github.event.issue.number }}
-          body: "👋 Thanks for opening this issue! We appreciate your contribution. Please make sure you’ve provided all the necessary details and screenshots, and don't forget to follow our Guidelines and Code of Conduct. Happy coding! 🚀
+          body: "👋 Thanks for opening this issue! We appreciate your contribution. Please make sure you've provided all the necessary details and screenshots, and don't forget to follow our Guidelines and Code of Conduct. Happy coding! 🚀
 "
 
       - name: Add a comment when an issue is closed
