--- a/.github/workflows/generate-sitemap.yml
+++ b/.github/workflows/generate-sitemap.yml
@@ -22,7 +22,7 @@ jobs:
           python-version: 3.x
 
       - name: Install Dependencies
-        run: pip install beautifulsoup4 requests
+        run: pip install beautifulsoup4 requests lxml
 
       - name: Generate Sitemap
         run: python .github/scripts/update_sitemap.py
