--- a/installation/requirements.txt
+++ b/installation/requirements.txt
@@ -1,12 +1,16 @@
-beautifulsoup4==4.12.3
-customtkinter==5.2.2
-fpdf==1.7.2
-lxml==5.3.0
-matplotlib==3.9.3
-mysql_connector_repackaged==0.3.1
-numpy==2.1.3
-Pillow==11.0.0
-PyGithub==2.5.0
-Requests==2.32.3
-seaborn==0.13.2
-tabulate==0.9.0
+PIL
+time
+numpy
+ctypes
+tkinter
+datetime
+tabulate
+functools
+webbrowser
+matplotlib
+customtkinter
+mysql.connector
+matplotlib.pyplot
+matplotlib.gridspec
+matplotlib.widgets
+mpl_toolkits.mplot3d
