--- a/installation/requirements.txt
+++ b/installation/requirements.txt
@@ -1,16 +1,35 @@
-PIL
-time
-numpy
-ctypes
-tkinter
-datetime
-tabulate
-functools
-webbrowser
-matplotlib
-customtkinter
-mysql.connector
-matplotlib.pyplot
-matplotlib.gridspec
-matplotlib.widgets
-mpl_toolkits.mplot3d
+annotated-types==0.7.0
+anyio==4.8.0
+click==8.1.8
+colorama==0.4.6
+contourpy==1.3.1
+customtkinter==5.2.2
+cycler==0.12.1
+darkdetect==0.8.0
+dnspython==2.7.0
+fastapi==0.115.6
+fonttools==4.55.3
+h11==0.14.0
+idna==3.10
+Jinja2==3.1.5
+kiwisolver==1.4.8
+MarkupSafe==3.0.2
+matplotlib==3.10.0
+motor==3.6.1
+mysql-connector==2.2.9
+mysql-connector-python==9.1.0
+numpy==2.2.1
+packaging==24.2
+pillow==11.1.0
+pydantic==2.10.5
+pydantic_core==2.27.2
+pymongo==4.9.2
+pyparsing==3.2.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+six==1.17.0
+sniffio==1.3.1
+starlette==0.41.3
+tabulate==0.9.0
+typing_extensions==4.12.2
+uvicorn==0.34.0
